--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/y-takey/shoroku-ex#readme",
   "devDependencies": {},
   "dependencies": {
+    "material-ui": "^1.0.0-beta.36",
     "parcel-bundler": "^1.6.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
