--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {},
   "dependencies": {
     "material-ui": "^1.0.0-beta.36",
+    "material-ui-icons": "^1.0.0-beta.36",
     "parcel-bundler": "^1.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
